redis lua updates & some commits